# UWImageSR-RealESRGAN

./: LICENSE  README.md  conda.md  config.yml  docker-compose.yml  environment.yml  orchestrator.sh
.devcontainer/: devcontainer.json
RealESRGAN/: .dockerignore  .gitattributes  Dockerfile  README.md  dependency_fix.sh  model.md  pyproject.toml  requirements.txt  run_script.sh
RealESRGAN/model/: net_g_5000.onnx
RealESRGAN/src/: inference_realesrgan_image.py  inference_realesrgan_video.py
applications/gradio/: gradio.md  gradio.sh  gradio_ui.py
applications/live-navigation/: UAV-navigation.md  requirements.txt  uav_live_navigation.py
applications/onnx/: ONNX.md  config.yml  dep-fix.sh  dependency-fix.sh  onnx_conversion_inference.ipynb  onnx_inference.py  pytorch2onnx.py  requirements.txt
applications/video-inference/: dependency-fix.sh  video-inference.ipynb
evaluation/: dependency-fix.sh  evaluation.ipynb  metrics_output.txt  metrics_output_ip.txt  pyproject.toml  requirements.txt
image-processing/: .gitignore  Dockerfile  README.md  ip_inference.py  pyproject.toml  requirements.txt
image-processing/src/: __init__.py  colour_correction.py  config.py  guided_filter.py  image_enhancement.py  video_processing.py
