[project]
name = "uccde"
version = "0.1.0"
description = "A Python project for enhancing underwater images and videos using optimized color correction and guided filtering techniques."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg-python==0.2.0",
    "future==1.0.0",
    "imageio==2.37.0",
    "lazy-loader==0.4",
    "natsort==8.4.0",
    "networkx==3.5",
    "numpy==2.3.0",
    "opencv-python-headless==4.11.0.86",
    "packaging==25.0",
    "pillow==11.2.1",
    "scikit-image==0.25.2",
    "scipy==1.15.3",
    "tifffile==2025.6.11",
]
